# Cygnus

./: .gitignore  Cygnus.spec  README.md  build.py  pyproject.toml  setup.iss  update_theme.py  write_glass_theme.py
src/app/: main.py
src/app/assets/: theme.qss
src/app/core/: background_manager.py  data_reset.py  dday_manager.py  events.py  profile_manager.py  session_manager.py  stats_engine.py  subject_manager.py  syllabus_manager.py  task_manager.py  theme_manager.py  timer_engine.py  todo_manager.py  update_manager.py  updater.py  utils.py
src/app/data/: __init__.py  database.py  models.py  quotes.json  settings_store.py  user_settings.json
src/app/ui/: __init__.py  contact_dialog.py  dashboard_page.py  main_window.py  profile_dialog.py  settings_page.py  stats_page.py  study_page.py  syllabus_tracker_page.py  task_page.py  test_logs_page.py  timer_page.py  todo_page.py
src/app/ui/widgets/: __init__.py  bar_chart.py  create_task_dialog.py  dday_card.py  heatmap.py  html_report_generator.py  manual_session_dialog.py  pie_chart.py  report_dialog.py  session_card.py  sidebar.py  snapshot_widget.py  step_chart.py  subject_card.py  subject_picker.py  timeline_bar.py  update_dialog.py  week_report_dialog.py  week_report_widget.py
src/tests/: conftest.py  test_models.py  test_session_manager.py  test_stats_engine.py  test_timer_engine.py
