[project]
name = "cygnus"
version = "2.3.0"
description = "Cygnus — A Yeolpumta-inspired study timer with analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.11.0",
    "sqlmodel>=0.0.38",
    "pypresence>=4.3.5",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.10",
]

[project.scripts]
cygnus = "app.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]

[tool.uv.pip]
python = "python3"

[tool.uv]
package = true
